--- a/todo-practice/tsconfig.app.json
+++ b/todo-practice/tsconfig.app.json
@@ -21,7 +21,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Testing */
+    "types": ["vitest/globals"],
   },
-  "include": ["src"]
+  "include": ["src", "vitest-setup.ts"]
 }
